@@ -462,6 +462,14 @@ public:
 
         return kmer_degree(kmer_f, kmer_r);
     }
+
+    // return all k-mer substrings, on the forward strand.
+    void get_kmers(const std::string &s, std::vector<std::string> &kmers)
+      const;
+
+    // return counts of all k-mers in this string.
+    void get_kmer_counts(const std::string &s,
+                         std::vector<BoundedCounterType> &counts) const;
 };
 };
 
